--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello Javascript</h1>
+    <h1>Javascript Intermediate Part1</h1>
+    <script src="script.js" type="module"></script>
 </body>
 </html>
